name:                graphplay
version:             0.0.0.1
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/rpeszek/GraphPlay#readme
license:             BSD3
license-file:        LICENSE
author:              Robert Peszek
maintainer:          example@example.com
copyright:           2016 Robert Peszek
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
                       , examples
  exposed-modules:     Lib
                       , PolyGraph.Common.Helpers
                       , PolyGraph.Common.BuildableCollection
                       , PolyGraph.Common.RecursionHelpers
                       , PolyGraph.ReadOnly.DiGraph
                       , PolyGraph.ReadOnly.DiGraph.Fold.TAFold
                       , PolyGraph.ReadOnly.DiGraph.Fold.TAMonoidFold
                       , PolyGraph.ReadOnly.DiGraph.Optimize.HashMapDiGraphConversion
                       , PolyGraph.ReadOnly.DiGraph.Optimize.MaterializedEdge
                       , PolyGraph.ReadOnly.Graph
                       , PolyGraph.Buildable.GDSBuild
                       , PolyGraph.Buildable.GBuild
                       , PolyGraph.Buildable.DiGBuild
                       , PolyGraph.Buildable.PolyRebuild
                       , PolyGraph.Buildable.PolyMorth
                       , PolyGraph.Instances.DiGraph.HashMapAsDiGraph
                       , PolyGraph.Instances.DiGraph.DiAdjacencyMatrix
                       , Play.DiGraph.SampleInstances.FirstLastWord
                       , PolyGraph.Instances.SimpleGraph
                       , Play.DiGraph.SampleData
                       , Play.DiGraph.TreeFoldOnSimpleGraph
                       , Play.DiGraph.TreeMonoidFoldOnSimpleGraph
                       , Play.DiGraph.IndexedFolds
                       , Play.DiGraph.PolyBuild
                       , Play.DiGraph.PolyRebuild
  build-depends:       base >= 4.7 && < 5
                      , lens
                      , mtl
                      , hashable
                      , hashtables
                      , containers
                      , unordered-containers
                      , matrix
  default-language:    Haskell2010
  extensions:          TemplateHaskell
                      , ScopedTypeVariables
                      , MultiParamTypeClasses
                      , FunctionalDependencies
                      , FlexibleContexts
                      , FlexibleInstances
                      , UndecidableInstances
                      , OverlappingInstances
                      , RankNTypes
                      -- GADT


-- executable graphplay-exe
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   build-depends:       base
--                      , graphplay
--   default-language:    Haskell2010

test-suite graphplay-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  --                   change back to Spec.hs when tests are in place
  main-is:             Spec.hs
  build-depends:       base
                     , graphplay
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/rpeszek/GraphPlay
