name:                graphplay
version:             0.0.0.1
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/rpeszek/GraphPlay#readme
license:             BSD3
license-file:        LICENSE
author:              Robert Peszek
maintainer:          example@example.com
copyright:           2016 Robert Peszek
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
                       , play
  exposed-modules:     PolyGraph.Common
                       , PolyGraph.Common.BuildableCollection
                       , PolyGraph.Common.RecursionHelpers
                       , PolyGraph.Common.BuildableMatrix
                       , PolyGraph.ReadOnly
                       , PolyGraph.ReadOnly.Graph
                       , PolyGraph.ReadOnly.Graph.GraphEquality
                       , PolyGraph.ReadOnly.Graph.Properties
                       , PolyGraph.ReadOnly.DiGraph
                       , PolyGraph.ReadOnly.DiGraph.DiGraphEquality
                       , PolyGraph.ReadOnly.DiGraph.Properties
                       , PolyGraph.ReadOnly.DiGraph.Fold.TAFold
                       , PolyGraph.ReadOnly.DiGraph.Fold.TAMonoidFold
                       , PolyGraph.ReadOnly.DiGraph.Optimize.HashMapDiGraphConversion
                       , PolyGraph.ReadOnly.DiGraph.Optimize.MaterializedEdge
                       , PolyGraph.Buildable
                       , PolyGraph.Buildable.Graph
                       , PolyGraph.Buildable.DiGraph
                       , PolyGraph.Buildable.PolyRebuild
                       , PolyGraph.Buildable.PolyMorth
                       , PolyGraph.Buildable.Properties
                       , PolyGraph.Adjustable
                       , Instances.DiGraph.DiEdgesByVertexMap
                       , Instances.AdjacencyMatrix
                       , Instances.ListGraphs
                       , Instances.EdgeCountMapGraph
                       , Instances.SimpleGraph
                       , PolyGraph.Common.PropertySupport
                       , PolyForFree.DiGraphDSL
                       , SampleInstances.FirstLastWord
                       , Deprecated.DiGraph.SampleData
                       , Deprecated.DiGraph.TreeFoldOnSimpleGraph
                       , Deprecated.DiGraph.TreeMonoidFoldOnSimpleGraph
                       , Deprecated.DiGraph.IndexedFolds
                       , Build.E01_UnsafeDiamond
                       , Build.E02_SafeDiamond
                       , Build.E03_PolyReloaded
                       , Build.E04_PolyToMax
                       , Deprecated.DiGraph.PolyRebuild
  build-depends:       base >= 4.7 && < 5
                      , lens
                      , mtl
                      , hashable
                      , hashtables
                      , containers
                      , unordered-containers
                      , matrix
                      , QuickCheck
                      , free
  default-language:    Haskell2010
  extensions:          TemplateHaskell
                      , ScopedTypeVariables
                      , MultiParamTypeClasses
                      , FunctionalDependencies
                      , FlexibleContexts
                      , FlexibleInstances
                      , UndecidableInstances
                      --, OverlappingInstances
                      , RankNTypes
                      , DeriveFunctor
                      -- GADT

-- change OverlappingInstances to OVERLAPPING/OVERLAPPABLE/OVERLAPS
-- https://mail.haskell.org/pipermail/ghc-devs/2014-July/005830.html

-- executable graphplay-exe
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   build-depends:       base
--                      , graphplay
--   default-language:    Haskell2010

test-suite graphplay-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , graphplay
                     , QuickCheck
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  extensions:          TemplateHaskell
                      , ScopedTypeVariables
                      , MultiParamTypeClasses
                      , FunctionalDependencies
                      , FlexibleContexts
                      , FlexibleInstances
                      , UndecidableInstances
                      --, OverlappingInstances
                      , RankNTypes
                      -- GADT

  other-modules:      Buildable.PropertiesSpec
                      , ReadOnly.EqualitySpec

source-repository head
  type:     git
  location: https://github.com/rpeszek/GraphPlay
